2008-12-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed the package name from `aria2c' to `aria2' in order to fix
	the packaging issue in Debian and Fedora.  The name of the
	executable is not changed.
	* configure.ac

2008-12-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typos
	* src/usage_text.h

2008-12-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typos and updated doc.
	* README

2008-12-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typos
	* doc/aria2c.1.txt

2008-12-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typos
	* src/usage_text.h

2008-11-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Print a message when no files to download.
	* src/download_helper.cc
	* src/main.cc
	* src/message.h

2008-11-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	RFC3986 complied Percent-Encoding(urlencode).
	Use uppercase hexadecimal digits for encoded text instead of lowercase
	ones.
	* src/Request.cc
	* src/Util.cc
	* src/Util.h
	* test/BtHandshakeMessageTest.cc
	* test/DefaultBtAnnounceTest.cc
	* test/DefaultBtContextTest.cc
	* test/RequestTest.cc
	* test/UtilTest.cc

2008-11-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that prevents aria2 from downloading 0-length files
	via HTTP/FTP.
	* src/DefaultBtContext.cc
	* src/DefaultBtContext.h
	* src/DownloadContext.h
	* src/FtpNegotiationCommand.cc
	* src/HttpResponseCommand.cc
	* src/HttpResponseCommand.h
	* src/RequestGroup.cc
	* src/SingleFileDownloadContext.cc
	* src/SingleFileDownloadContext.h
	* test/BtPostDownloadHandlerTest.cc
	* test/MetalinkPostDownloadHandlerTest.cc
	* test/MockBtContext.h

2008-11-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that -pfalse and -ptrue are not recognized properly.
	* src/option_processing.cc
	
2008-11-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
